--- a/src/templates/main.template.html
+++ b/src/templates/main.template.html
@@ -2,7 +2,7 @@
 
 	<div class="header">
 		<div class="logo">
-			<img alt="" class="rocket" src="i/stellar-rocket@2x.png" />
+			<img alt="" class="rocket" src="../assets/i/stellar-rocket@2x.png" />
 			<span class="app_name">stellar checkout</span>
 		</div>
 		<div class="alt">
