--- a/src/templates/main.template.html
+++ b/src/templates/main.template.html
@@ -34,7 +34,7 @@
 			</div>
 		</div>
 		<div class="field">
-			<label for="stellarCheckoutPublicKey">Public Key - <a class="toggle_keys" href="#">use private seed</a></label>
+			<label for="stellarCheckoutPublicKey">Your Public Key - <a class="toggle_keys" href="#">use private seed</a></label>
 			<div class="txtwrap txtwrap--input">
 				<input id="stellarCheckoutPublicKey" class="txt" type="text" value="" required></input>
 				<span class="error_msg"></span>
