--- a/src/templates/payment.error.mustache.html
+++ b/src/templates/payment.error.mustache.html
@@ -3,7 +3,7 @@
 		<div class="error_message">
 			<a class="close" href="#">close</a>
 			<div class="message">{{message}}
-				{{data.extras.result_codes.transaction}}: 
+				{{data.extras.result_codes.transaction}}<br />
 				{{#data.extras.result_codes.operations}}
 					<span>{{.}}</span>
 				{{/data.extras.result_codes.operations}}
