--- a/src/templates/main.template.html
+++ b/src/templates/main.template.html
@@ -34,16 +34,9 @@
 			</div>
 		</div>
 		<div class="field">
-			<label for="stellarCheckoutPublicKey">Your Public Key - <a class="toggle_keys" href="#">use private seed</a></label>
+			<label for="stellarCheckoutPublicKey">Your Public Key</label>
 			<div class="txtwrap txtwrap--input">
 				<input id="stellarCheckoutPublicKey" class="txt" type="text" value="" required></input>
-				<span class="error_msg"></span>
-			</div>
-		</div>
-		<div class="field stellar_checkout_hidden">
-			<label for="stellarCheckoutPrivateSeed">Private Seed - <a class="toggle_keys" href="#">use public key</a> - <a class="reveal_seed_link" href="#">reveal</a></label>
-			<div class="txtwrap txtwrap--input">
-				<input id="stellarCheckoutPrivateSeed" class="txt" type="password" value="" required></input>
 				<span class="error_msg"></span>
 			</div>
 		</div>
