--- a/src/templates/main.template.html
+++ b/src/templates/main.template.html
@@ -19,7 +19,7 @@
 		<div class="field">
 			<label for="stellarCheckoutTotal">Total</label>
 			<div class="txtwrap txtwrap--input">
-				<input id="stellarCheckoutTotal" class="txt" type="number" required></input>
+				<input id="stellarCheckoutTotal" class="txt" type="text" autocomplete="off" required></input>
 				<span class="currency"></span>
 				<span class="error_msg"></span>
 			</div>
@@ -27,7 +27,7 @@
 		<div class="field">
 			<label for="stellarCheckoutAmount">Amount</label>
 			<div class="txtwrap txtwrap--input">
-				<input id="stellarCheckoutAmount" class="txt" type="text" step="0.0000001" autocomplete="off" required></input>
+				<input id="stellarCheckoutAmount" class="txt" type="text" autocomplete="off" required></input>
 				<span class="currency">XLM</span>
 				<span class="error_msg"></span>
 				<span class="spinner"><i class="fas fa-spinner fa-spin"></i></span>
@@ -36,7 +36,7 @@
 		<div class="field">
 			<label for="stellarCheckoutPublicKey">Your Public Key</label>
 			<div class="txtwrap txtwrap--input">
-				<input id="stellarCheckoutPublicKey" class="txt" type="text" value="" required></input>
+				<input id="stellarCheckoutPublicKey" class="txt" type="text" autocomplete="off" required></input>
 				<span class="error_msg"></span>
 			</div>
 		</div>
