--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,18 +1,21 @@
 /* STELLAR CHECKOUT */
 
 .stellar_checkout_container {
-    height: 98vh;
+    height: 98vh; /* todo: ugh vh */
 }
 
 .stellar_checkout {
 	border: .0625rem solid #eee;
 	border-radius: .2rem;
     position: relative;
+    font-family: monospace, monospace;
 
     float: left;
     width: 100%;
     height: 100%;
 }
+
+/** OVERLAYS */
 
 .stellar_checkout_overlay,
 .stellar_checkout_success {
@@ -30,8 +33,9 @@
     width: 100%;
 }
 
-.stellar_checkout_overlay {
-    background-image: url('../i/stellar-rocket@2x.png');
+.stellar_checkout_overlay.loaded {
+    opacity: 0;
+    transform: scale3d(0, 0, 0);
 }
 
 .stellar_checkout_success {
@@ -46,12 +50,13 @@
     width: 50%;
     font-weight: bold;
     color: green;
-    font-family: monospace, monospace;
     text-transform: uppercase;
     font-size: 2.4rem;
     height: 25%;
     margin-top: -12.5%;
 }
+
+/** ERRORS */
 
 .stellar_checkout_error {
     position: absolute;
@@ -78,8 +83,10 @@
     margin-left: 4%;
 }
 
-.stellar_checkout_error > div {
-    
+.stellar_checkout_error .close {
+    position: absolute;
+    top: .6rem;
+    right: 1.2rem;
 }
 
 .stellar_checkout_error .error_message {
@@ -88,18 +95,9 @@
     justify-items: center;
 }
 
-.stellar_checkout_error .close {
-    position: absolute;
-    top: .6rem;
-    right: 1.2rem;
-}
+/** HEADER */
 
-.stellar_checkout_overlay.loaded {
-    opacity: 0;
-    transform: scale3d(0, 0, 0);
-}
-
-.stellar_checkout .header {
+.stellar_checkout_header {
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -108,12 +106,12 @@
     padding: .8rem;
 }
 
-.stellar_checkout .header .alt {
+.stellar_checkout_header .alt {
     display: none;
     width: 100%;
 }
 
-.stellar_checkout .header.payment_awaiting .alt > div {
+.stellar_checkout_header.payment_awaiting .alt > div {
     flex-basis: 50%;
     align-items: center;
     display: flex;
@@ -121,44 +119,44 @@
     justify-content: center;
 }
 
-.stellar_checkout .header .qr_wrap,
-.stellar_checkout .header .status {
+.stellar_checkout_header .qr_wrap,
+.stellar_checkout_header .status {
 }
 
-.stellar_checkout .header.payment_awaiting .alt {
+.stellar_checkout_header.payment_awaiting .alt {
     display: flex;
 }
 
     @media screen and (min-device-width: 640px) {
-        .stellar_checkout .header {
+        .stellar_checkout_header {
             flex-direction: row;
         }
-        .stellar_checkout .header .logo {
+        .stellar_checkout_header .logo {
             flex-basis: 33%;
         }
-        .stellar_checkout .header .alt {
+        .stellar_checkout_header .alt {
             flex-grow: 1;
             width: auto;
         }
-        .stellar_checkout .header .alt > div {
+        .stellar_checkout_header .alt > div {
             flex-basis: 50%;
         }
     }
 
 
-.stellar_checkout .header .status {
+.stellar_checkout_header .status {
     background: #f8f8f8;
     margin: .8rem .8rem .8rem 0;
     text-transform: uppercase;
     transition: .4s;
 }
 
-.stellar_checkout .header .status > span {
+.stellar_checkout_header .status > span {
     line-height: 1.6;
     width: 50%;
 }
 
-.stellar_checkout .logo .rocket {
+.stellar_checkout_header .logo .rocket {
     background: #fff;
     border: .0625rem solid #eee;
     border-radius: .4rem;
@@ -169,7 +167,7 @@
     width: 5.6rem;
 }
 
-.stellar_checkout .logo .app_name {
+.stellar_checkout_header .logo .app_name {
     display: block;
     padding: .4rem;
     text-transform: uppercase;
@@ -177,6 +175,7 @@
     font-family: monospace, monospace;
 }
 
+/* FORM */
 
 .stellar_checkout_form {
     display: none;
@@ -186,15 +185,7 @@
     display: block;
 }
 
-
-
-.stellar_checkout .transaction_info {
-    line-height: 1.2;
-    color: #a0a0a0;
-    font-family: monospace, monospace;
-    font-size: .9rem;
-    padding: 0 .4rem;
-}
+/* FORM FIELDS */
 
 .stellar_checkout .field {
 	padding: .8rem .4rem;
@@ -209,12 +200,13 @@
 }
 
 .stellar_checkout .field label {
-	display: block;
-    width: 100%;
-    text-transform: uppercase;
-    color: #a0a0a0;
+	color: #a0a0a0;
+    display: block;
     font-size: .8rem;
+    letter-spacing: .075rem;
     padding: .4rem .2rem;
+    text-transform: uppercase;
+    width: 100%;
 }
 
 .stellar_checkout .field .txtwrap {
@@ -262,6 +254,34 @@
     width: 100%;
 }
 
+.stellar_checkout .field .error {
+    border: 0.0625rem solid #f80000;
+    border-radius: .2rem;
+}
+
+.stellar_checkout .field .valid {
+    border: 0.0625rem solid #05ff05;
+    border-radius: .2rem;
+}
+
+.stellar_checkout .field .error_msg {
+    border-radius: .4rem;
+    left: 0;
+    padding: .4rem .4rem;
+    position: absolute;
+    transition: all .3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    top: 0;
+    width: 100%;
+    z-index: -1;
+}
+
+.stellar_checkout .field .error .error_msg {
+    color: #f80000;
+    top: 2.55rem;
+}
+
+/* BUTTONS */
+
 .stellar_checkout .button_row {
 	padding: .8rem .4rem;
 }
@@ -293,39 +313,14 @@
     opacity: 0.5;
 }
 
-.stellar_checkout .field .error {
-    border: 0.0625rem solid #f80000;
-    border-radius: .2rem;
-}
+/* PAYMENT AWAITING */
 
-.stellar_checkout .field .valid {
-    border: 0.0625rem solid #05ff05;
-    border-radius: .2rem;
-}
-
-.stellar_checkout .field .error_msg {
-    border-radius: .4rem;
-    left: 0;
-    padding: .4rem .4rem;
-    position: absolute;
-    transition: all .3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    top: 0;
-    width: 100%;
-    z-index: -1;
-}
-
-.stellar_checkout .field .error .error_msg {
-    color: #f80000;
-    top: 2.55rem;
-}
-
-.stellar_checkout .stellar_checkout_warning {
-    border: .125rem solid #f80000;
-    border-radius: .2rem;
-    padding: .8rem;
-    color: #f80000;
+.stellar_checkout_payment_awaiting .transaction_info {
     line-height: 1.2;
-    margin-top: .4rem;
+    color: #a0a0a0;
+    font-family: monospace, monospace;
+    font-size: .9rem;
+    padding: 0 .4rem;
 }
 
 .stellar_checkout_hidden {
