--- a/src/templates/main.template.html
+++ b/src/templates/main.template.html
@@ -1,6 +1,6 @@
 <div class="stellar_checkout">
 
-	<div class="header">
+	<div class="stellar_checkout_header">
 		<div class="logo">
 			<img alt="" class="rocket" src="../assets/i/stellar-rocket@2x.png" />
 			<span class="app_name">stellar checkout</span>
