- backup w/ breaking changes

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -254,6 +254,7 @@
 .stellar_checkout .field .txt {
 	background: transparent;
 	border: 0;
+    font-family: monospace, monospace;
 	font-size: 1.25rem;
     height: 100%;
     outline: 0;
