--- a/src/templates/payment.awaiting.mustache.html
+++ b/src/templates/payment.awaiting.mustache.html
@@ -1,4 +1,21 @@
 <div class="stellar_checkout_payment_awaiting">
+	<div class="stellar_checkout_header">
+		<span class="stellar_checkout_goback stellar_checkout_hidden">
+			<i class="fas fa-chevron-circle-left"></i>
+		</span>
+		<div class="logo">
+			<img alt="" class="rocket" src="../assets/i/stellar-rocket@2x.png" />
+			<span class="app_name">stellar checkout</span>
+		</div>
+		<div class="alt">
+			<div class="qr_wrap">
+				<canvas class="qrcode"></canvas>
+			</div>
+			<div class="status">
+				<span>Awaiting Payment</span>
+			</div>
+		</div>
+	</div>
 	<div class="transaction_info">Complete this transaction by sending a payment with the following information:</div>
 	<div class="field">
 		<label for="stellarCheckoutConfirmTo">QR Code Format</label>
