--- a/src/templates/payment.awaiting.mustache.html
+++ b/src/templates/payment.awaiting.mustache.html
@@ -1,6 +1,6 @@
-<div class="stellar_checkout_payment_awaiting">
+<div class="stellar_checkout_payment_awaiting stellar_checkout_hidden">
 	<div class="stellar_checkout_header">
-		<span class="stellar_checkout_goback stellar_checkout_hidden">
+		<span class="stellar_checkout_goback">
 			<i class="fas fa-chevron-circle-left"></i>
 		</span>
 		<div class="logo">
