--- a/src/templates/payment.complete.mustache.html
+++ b/src/templates/payment.complete.mustache.html
@@ -1,3 +1,3 @@
-<div class="stellar_checkout_success">
+<div class="stellar_checkout_payment_complete stellar_checkout_hidden">
 <div class="message">Payment complete</div>
 </div>
