--- a/src/templates/payment.awaiting.mustache.html
+++ b/src/templates/payment.awaiting.mustache.html
@@ -18,11 +18,11 @@
 	</div>
 	<div class="transaction_info">Complete this transaction by sending a payment with the following information:</div>
 	<div class="field">
-		<label for="stellarCheckoutConfirmTo">QR Code Format</label>
-		<div class="txtwrap">
+		<label for="stellarCheckoutConfirmTo">QRCode Format</label>
+		<div class="txtwrap txtwrap--picker">
 			<select id="walletPicker" class="picker">
-				<option value="destinationkey">Merchant's Account ID (Public Key)</option>
-				<option value="envelopexdr">Envelope XDR</option>
+				<option value="destinationkey">Public Key</option>
+				<option value="envelopexdr">XDR</option>
 				<option value="stargazer">Stargazer Wallet</option>
 			</select>
 		</div>
