--- a/src/templates/payment.awaiting.mustache.html
+++ b/src/templates/payment.awaiting.mustache.html
@@ -9,41 +9,78 @@
 		</div>
 		<div class="alt">
 			<div class="qr_wrap">
-				<canvas class="qrcode"></canvas>
+				<div>
+					<span id="qrCodeSpinner" class="spinner"><i class="fas fa-spinner fa-spin"></i></span>
+					<canvas id="qrCodeCanvas" class="qrcode stellar_checkout_hidden"></canvas>
+				</div>
 			</div>
 			<div class="status">
 				<span>Awaiting Payment</span>
 			</div>
 		</div>
 	</div>
-	<div class="transaction_info">Complete this transaction by sending a payment with the following information:</div>
-	<div class="field">
+	<div class="transaction_info">Complete this transaction by scanning the QR code. The QR code contains a ready to be signed XDR envelope (<a id="linkShowWalletPicker" href="#">change qrcode format</a>). Alternatively, manually create a payment with the following information:</div>
+	<div class="field stellar_checkout_hidden">
 		<label for="stellarCheckoutConfirmTo">QRCode Format</label>
 		<div class="txtwrap txtwrap--picker">
 			<select id="walletPicker" class="picker">
-				<option value="destinationkey">Public Key</option>
 				<option value="envelopexdr">XDR</option>
+				<option value="destinationkey">Destination Public Key</option>
 				<option value="stargazer">Stargazer Wallet</option>
 			</select>
 		</div>
 	</div>
 	<div class="field">
 		<label for="stellarCheckoutConfirmTo">To</label>
-		<div class="txtwrap">
-			<textarea id="stellarCheckoutConfirmTo" class="txt" type="text" disabled>{{payment.to}}</textarea>
+		<div class="txtwrap txtwrap--clipboard">
+			<textarea id="stellarCheckoutConfirmTo" class="txt" readonly>{{payment.to}}</textarea>
+			<span class="clipboard">
+				<i class="fas fa-copy"></i>
+				<span id="stellarCheckoutConfirmToClipboard" class="clipboard_click"></span>
+			</span>
 		</div>
 	</div>
 	<div class="field">
 		<label for="stellarCheckoutConfirmFrom">From</label>
-		<div class="txtwrap">
-			<textarea id="stellarCheckoutConfirmFrom" class="txt" type="text" disabled>{{payment.from}}</textarea>
+		<div class="txtwrap txtwrap--clipboard">
+			<textarea id="stellarCheckoutConfirmFrom" class="txt" readonly>{{payment.from}}</textarea>
+			<span class="clipboard">
+				<i class="fas fa-copy"></i>
+				<span id="stellarCheckoutConfirmFromClipboard" class="clipboard_click"></span>
+			</span>
+		</div>
+	</div>
+	<div class="field">
+		<label for="stellarCheckoutConfirmMemo">Memo</label>
+		<div class="txtwrap txtwrap--clipboard">
+			<textarea id="stellarCheckoutConfirmMemo" class="txt" readonly>{{payment.memo}}</textarea>
+			<span class="clipboard">
+				<i class="fas fa-copy"></i>
+				<span id="stellarCheckoutConfirmMemoClipboard" class="clipboard_click"></span>
+			</span>
+		</div>
+	</div>
+	<div class="field">
+		<label for="stellarCheckoutConfirmMemoType">Memo Type</label>
+		<div class="txtwrap txtwrap--picker">
+			<select id="stellarCheckoutConfirmMemoType" class="picker" disabled>
+				<option value="hash" selected>MemoHash</option>
+				<option value="id">MemoID</option>
+				<option value="none">MemoNone</option>
+				<option value="return">MemoReturn</option>
+				<option value="text">MemoText</option>
+			</select>
 		</div>
 	</div>
 	<div class="field">
 		<label for="stellarCheckoutConfirmAmount">Amount</label>
-		<div class="txtwrap txtwrap--input">
-			<input id="stellarCheckoutConfirmAmount" class="txt" type="text" value="{{payment.amount}}" disabled></input>
+		<div class="txtwrap txtwrap--input txtwrap--clipboard">
+			<input id="stellarCheckoutConfirmAmount" class="txt" type="text" value="{{payment.amount}}" readonly></input>
 			<span class="currency">XLM</span>
+			<span class="clipboard">
+				<i class="fas fa-copy"></i>
+				<span id="stellarCheckoutConfirmAmountClipboard" class="clipboard_click"></span>
+			</span>
 		</div>
 	</div>
 </div>
