- fixed css typo for .txtwrap .spinner

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -227,7 +227,7 @@
     width: 100%;
 }
 
-.stellar_checkout .textwrap .spinner {
+.stellar_checkout .txtwrap .spinner {
     position: absolute;
     top: 30%;
     right: .8rem;
