--- a/src/templates/payment.error.mustache.html
+++ b/src/templates/payment.error.mustache.html
@@ -1,8 +1,8 @@
 <div class="stellar_checkout_error">
-	<div class="inner">
-		<div class="error_message">
-			<a class="close" href="#">close</a>
-			<div class="message">{{message}}
+	<div class="stellar_checkout_error_inner">
+		<div class="stellar_checkout_error_message">
+			<a class="stellar_checkout_error_close" href="#">close</a>
+			<div class="stellar_checkout_error_message">{{message}}
 				{{data.extras.result_codes.transaction}}<br />
 				{{#data.extras.result_codes.operations}}
 					<span>{{.}}</span>
