--- a/src/templates/main.template.html
+++ b/src/templates/main.template.html
@@ -1,3 +1,3 @@
-<div class="stellar_checkout">
+<div id="stellarCheckoutRoot" class="stellar_checkout">
 	<div class="stellar_checkout_overlay"></div>
 </div>
