--- a/src/views/payment.form.view/templates/payment.form.mustache.html
+++ b/src/views/payment.form.view/templates/payment.form.mustache.html
@@ -15,7 +15,7 @@
 			</div>
 		</div>
 		<div class="stellar_checkout_field">
-			<label for="stellarCheckoutAmount">Amount</label>
+			<label for="stellarCheckoutAmount">Amount <span id="stellarCheckoutCurrencyConversionInfo" class="stellar_checkout_currency_conversion_info"></span></label>
 			<div class="stellar_checkout_txtwrap stellar_checkout_txtwrap--input">
 				<input id="stellarCheckoutAmount" class="stellar_checkout_txt" type="text" autocomplete="off" value="{{payment.amount}}" disabled></input>
 				<span class="stellar_checkout_currency">XLM</span>
